--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.3",
-    "node-cron": "^4.0.5",
-    "puppeteer": "^24.8.2"
+    "node-cron": "^4.0.5"
   }
 }
