--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+   "@sparticuz/chromium": "^116.0.0",
     "axios": "^1.10.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
@@ -22,7 +23,7 @@
     "node-cron": "^4.0.5",
     "node-telegram-bot-api": "^0.66.0",
     "playwright": "^1.52.0",
-    "puppeteer": "^24.10.2",
+    "puppeteer-core": "^21.6.1",
     "socks-proxy-agent": "^8.0.5"
   }
 }
